examples/pos/special_names.effekt
def even?(n: Int): Bool =
  if (n == 0) true else not(even?(n - 1))

def doIt!(msg: String): Unit = println(msg)

def main() = {
  println(3.even?)
  "hello".doIt!
}
