examples/neg/name-based-implicits/type-error-no-overload.effekt
def foo(): Bool = false

def baz{ ?foo: => Int }: String = "1"

def main() = {
  val y: String = baz()
  println(y)
}